# shape-memory

./: .gitignore  README.md  background.md  demos.md  elastocaloric.md  index.md  mechanism.md  methods-loading.md  methods-observables.md  methods-potential.md  methods.md  microstructure.md  myst.yml  orientation.md  polycrystal-shear.md  polycrystal.md  pyproject.toml  references.md  results.md  shape-memory.md  style.css  texture.md
.github/workflows/: deploy.yml
public/widgets/data/: compare_index.json  compare_texture_index.json  ni_rich.json  niti_2d.json  niti_5050.json  niti_cu.json  niti_cu11.json  niti_cu6.json  niti_hf.json  niti_hf6.json  niti_nucleation.json  niti_polycrystal.json  niti_polycrystal_big.json  niti_polycrystal_shear.json  niti_sme.json  niti_superelastic.json  niti_twin.json  orientation.json  smoke.json  texture_random.json  texture_t001.json  texture_t111.json
scripts/: m0_b2_vs_b19.py  m1_run_loop.py  m4_doping.py  m5_md.py  m6_hero2d.py  m7_superelastic.py  m8_doping.py  plot_loop.py  postbuild.py  r10_landscape.py  r11_shapememory.py  r12_polycrystal.py  r13_texture.py  r14_polycrystal_shear.py  r3_latent_heat.py  r4_twin.py  r6_nucleation.py  r7_verify_martensite.py  r8_orientation.py  test_reversible.py
src/shapemem/: __init__.py  aqs.py  build.py  export.py  md.py  order.py  superelastic.py  twin.py
widgets/: compare.js  elastocaloric.js  lattice-morph.js  orient-strain.js
