[project]
name = "shapemem"
version = "0.1.0"
description = "NiTi shape-memory / elastocaloric supercell simulation with MACE-MP0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "ase>=3.22",
]

[project.optional-dependencies]
mace = ["torch", "mace-torch>=0.3"]
phonons = ["phonopy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shapemem"]
